# SDLImage

./: CMakeLists.txt  README.md  build.gradle
src/androidTest/java/com/tz/dream/sdl/demo/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: SDLTest.cpp  SDL_Lesson.c  SDL_Test1.cpp  SDL_Test2.cpp  SDL_Test3.cpp  SDL_Test4.cpp  SDL_Test5.cpp  SDL_Test6.cpp  SDL_Test7.cpp  audio.c  playmus.c  test.c
src/main/java/com/tz/dream/sdl/demo/: MainActivity.java
src/main/jniLibs/src/main/android/: SDL_android_main.c
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml
src/test/java/com/tz/dream/sdl/demo/: ExampleUnitTest.java
